--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,8 @@ main {
 }
 
 .main__container {
-  padding: 3rem 0;
+  padding-top: 2.5rem;
+  padding-bottom: 3rem;
   margin: auto;
   width: 90%;
   max-width: 1280px;
@@ -65,9 +66,9 @@ main {
 /* Text styles */
 .main__h1 {
   color: var(--white);
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 700;
-  line-height: 1.3;
+  line-height: 1.1;
   max-width: 560px;
 }
 
@@ -106,6 +107,18 @@ main {
     align-items: center;
     column-gap: 2rem;
   }
+
+  .main__h1 {
+    font-size: 3em;
+    line-height: 1.3;
+  }
+
+  .main__container {
+    padding: 3rem 0;
+    margin: auto;
+    width: 90%;
+    max-width: 1280px;
+  }
 }
 
 .main__hero {
@@ -133,13 +146,13 @@ End of main section
   display: grid;
   grid-template-columns: 1fr;
   align-items: center;
-  grid-row-gap: 2.4rem;
+  grid-row-gap: 1.75rem;
 }
 
 .sectionOne__element h2 {
   font-size: 1.8em;
   font-weight: 800;
-  line-height: 1.4;
+  line-height: 1.2;
   margin-bottom: 1.8rem;
 }
 
@@ -167,6 +180,13 @@ End of main section
   .sectionOne__element--bordered {
     border-left: 1px solid var(--purple);
     border-right: 1px solid var(--purple);
+  }
+
+  .sectionOne__element h2 {
+    font-size: 1.8em;
+    font-weight: 800;
+    line-height: 1.4;
+    margin-bottom: 1.8rem;
   }
 }
 
@@ -239,7 +259,7 @@ End of sectionOne
 
 .services__container {
   display: grid;
-  grid-row-gap: 3em;
+  grid-row-gap: 2em;
 }
 
 @media only screen and (min-width: 820px) {
@@ -250,6 +270,12 @@ End of sectionOne
   .services__container {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1em;
+  }
+
+  .contacts h2 {
+    font-size: 2.2rem;
+    line-height: 1.5;
+    margin-bottom: 2.5rem;
   }
 }
 
@@ -278,7 +304,7 @@ Start of contacts section
   color: var(--deep-blue);
   font-size: 2.2rem;
   text-align: center;
-  line-height: 1.5;
+  line-height: 1.2;
   max-width: 540px;
   margin: auto;
   margin-bottom: 2.5rem;
