Optimised about page on mobile

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -27,7 +27,7 @@
                 today?
             </h1>
             <h2 id="contact" class="contacts__h2 contacts__h2--align">
-                We're here for you. Give us a call or send an Email.
+                We're here for you. Give us a call or send us an Email.
             </h2>
             <p class="contacts__p contacts__p--align">
                 When we started Visign, we set out to provide professional brand
