--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,8 +40,8 @@
       <div class="sectionOne__layout">
         <div class="sectionOne__element">
           <h2>
-            We're a radical design studio in Nairobi. We create
-            simple organic
+            We're a creative design studio in Nairobi. We create
+            simple and organic
             designs.
           </h2>
           <p>
@@ -51,9 +51,7 @@
         <div class="sectionOne__element sectionOne__element--bordered">
           <p>
             We create unique brands, we rebrand those who want
-            to be
-            unique
-            and we do it right.
+            to be unique and we do it right.
           </p>
         </div>
         <div class="sectionOne__element">
@@ -122,7 +120,7 @@
   </section>
   <section class="contacts">
     <h2 id="contact" class="contacts__h2 contacts__h2--align">
-      We're here for you. Give us a call or send an Email.
+      We're here for you. Give us a call or send us an Email.
     </h2>
     <p class="contacts__p contacts__p--align">
       We're excited to work with you. Your brand's journey to the next
