--- a/public/css/test.css
+++ b/public/css/test.css
@@ -27,11 +27,12 @@
 
 .about-us__h1 {
   color: var(--deep-blue);
+  width: 90%;
+  margin: 0 auto;
   font-size: 1.8rem;
   font-weight: 300;
   text-align: center;
-  line-height: 1.5;
-  max-width: 540px;
+  line-height: 1.2;
   margin: 2.5rem auto;
 }
 
@@ -41,9 +42,10 @@
 
 .about-us__h2 {
   color: var(--deep-blue);
+  width: 90%;
   font-size: 2.2rem;
   text-align: center;
-  line-height: 1.5;
+  line-height: 1.2;
   max-width: 600px;
   margin: auto;
   margin-bottom: 4rem;
@@ -53,7 +55,7 @@
   color: var(--deep-blue);
   font-size: 2.2rem;
   text-align: center;
-  line-height: 1.5;
+  line-height: 1.2;
   max-width: 600px;
   margin: 4rem auto;
 }
@@ -68,8 +70,18 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .about-us__h1 {
+    max-width: 540px;
+  }
+
   .about-us__h2 {
+    line-height: 1.5;
+    max-width: 600px;
     margin-top: 0;
+  }
+
+  .about-us__more__h2 {
+    line-height: 1.5;
   }
 }
 
@@ -115,7 +127,7 @@
   padding: 2rem;
   display: grid;
   align-items: center;
-  background-color: #fee002;
+  background-color: var(--primary);
   /* margin: auto; */
 }
 
