--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -30,11 +30,10 @@
                 We're here for you. Give us a call or send us an Email.
             </h2>
             <p class="contacts__p contacts__p--align">
-                When we started Visign, we set out to provide professional brand
-                development services to SMEs at affordable prices. We're excited
-                to
-                work with you today. Your brand's journey to the next
-                level begins here.
+                Our goal is to provide you professional brand
+                development services at a price you can afford. We're really
+                excited to work with you. Your brand's journey to the next
+                level begins now.
             </p>
             <div class="contacts__button-div">
                 <a class="contacts__link" href="mailto:dkibui@visign.co.ke">
