--- a/views/showblogs.ejs
+++ b/views/showblogs.ejs
@@ -26,10 +26,10 @@
             <%- include('./partials/nav'); %>
         </header>
         <div class="blog__header">
-            <h1 class="title">A good blog for your read.
+            <h1 class="title">Our blog page.
             </h1>
             <h2>
-                Our experiences creating brands and websites.
+                Documenting experiences creating brands and websites.
             </h2>
         </div>
         <% JSON.parse(blogs).forEach(function(blog) { %>
