Updated conatct information

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -44,7 +44,7 @@
             </div>
             <p class="contacts__address">
                 Cell: +254 728 49 4090 <br />
-                Email: dkibui@visign.co.ke<br />Office: 6th Floor, Westend
+                Email: info@visign.co.ke<br />Office: 6th Floor, Westend
                 Towers.<br />Westlands
                 Nairobi.
             </p>
